--- a/software.html
+++ b/software.html
@@ -39,16 +39,28 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698649947-junior-software-developer'>IBI Group Junior Software Developer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Toronto, ON Canada</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://itatalentportal.com/job/full-stack-software-engineer/49137473/'>Full-Stack Software Engineer Job Opening in Chicago, Illinois - Illinois Technology Association Career Center</a></h5> 
+<p><span class="badge badge-light">Chicago, Illinois</span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/cision-canada/job/o2lg9fww'>Cision Canada Careers - Senior Software Developer</a></h5> 
+<p><span class="badge badge-light">Canada Canada Ottawa, Ontario</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/workiva/job/ooUrbfwE'>Workiva Inc. Careers - Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/workiva/job/oxUrbfwN'>Workiva Inc. Careers - Senior Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://www.invokegeek.com/jobs/software-engineer-node-js-platform/'>Software Engineer, Node.js Platform ? invokeGeek</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">United States  San Jose, CA</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/medmen/jobs/4500536002'>Job Application for Principal Software Engineer at MedMen</a></h5> 
@@ -147,11 +159,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.womenwhocode.com/jobs/5416?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign=&utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Senior Software Engineer Manager - Red Hat | Women Who Code</a></h5> 
+<h5><a href='https://www.womenwhocode.com/jobs/5416?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign=&utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Senior Software Engineer Manager - Red Hat | Women Who Code</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.localwork.ca/job/589802/software-developer/'>Software Developer job with Jobspring Partners | 589802</a></h5> 
+<h5><a href='https://www.localwork.ca/job/589802/software-developer/'>Software Developer job with Jobspring Partners | 589802</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -251,7 +263,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.yash.com/job/Hyderabad-Sr_-Software-Engineer-Hybris-Job-Tela/540876610/'>Sr. Software Engineer - Hybris Job</a></h5> 
+<h5><a href='https://careers.yash.com/job/Hyderabad-Sr_-Software-Engineer-Hybris-Job-Tela/540876610/'>Sr. Software Engineer - Hybris Job</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -275,7 +287,7 @@
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://sparkcognition.applytojob.com/apply/WJtXUDOzHZ/Software-Engineer'>Software Engineer - SparkCognition - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://sparkcognition.applytojob.com/apply/WJtXUDOzHZ/Software-Engineer'>Software Engineer - SparkCognition - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -303,7 +315,7 @@
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/software-engineer-iii-27184'>Software Engineer III - RELX Careers</a></h5> 
+<h5><a href='https://4re.referrals.selectminds.com/jobs/software-engineer-iii-27184'>Software Engineer III - RELX Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -351,7 +363,7 @@
 <p><span class="badge badge-light">Chennai Chennai, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://versett.recruitee.com/o/technical-lead-software-engineering'>
+<h5><a href='https://versett.recruitee.com/o/technical-lead-software-engineering'>
       Technical Lead (Software Engineering) - Versett
     </a></h5> 
 <p><span class="badge badge-light">Toronto, Canada</span></p>
@@ -429,18 +441,6 @@
 <hr/>
 <h5><a href='http://cerebralgroup.applytojob.com/apply/4GIjXEcweI/Software-Developer'>Software Developer - Cerebral Staffing, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light">Milan Milan</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ValtechNorthAmerica/743999698492356-junior-software-developer'>Valtech North America Junior Software Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">North America Buffalo, NY</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/alyvant/jobs/4498249002'>Job Application for Software Engineer at Alyvant</a></h5> 
-<p><span class="badge badge-light">New York, NY</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698617351-software-engineer-c-net-angular-web-api'>Technology Navigators Software Engineer - C#/.NET, Angular, Web API | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Houston, Texas United States  Austin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
