--- a/machine.html
+++ b/machine.html
@@ -101,7 +101,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698578720-phd-in-the-area-of-knowledge-based-machine-learning-for-autonomous-driving'>Bosch Group PhD ? in the area of knowledge-based Machine Learning for Autonomous Driving | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698578720-phd-in-the-area-of-knowledge-based-machine-learning-for-autonomous-driving'>Bosch Group PhD ? in the area of knowledge-based Machine Learning for Autonomous Driving | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -137,7 +137,7 @@
 <p><span class="badge badge-light">Raleigh , North Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mlconf.com/job/oracle-redwood-city-ca-6-job-description-senior-software-development-engineer-machine-learning-oci-data-science-cloud-service-19001b4y-senior-software-development-engineer-machine-learning/'>Job Description - Senior Software Development Engineer - Machine Learning - OCI Data Science Cloud Service (19001B4Y) Senior Software Development Engineer - Machine Learning - OCI Data Science Cloud Service 19001B4Y - The Machine Learning Conference</a></h5> 
+<h5><a href='https://mlconf.com/job/oracle-redwood-city-ca-6-job-description-senior-software-development-engineer-machine-learning-oci-data-science-cloud-service-19001b4y-senior-software-development-engineer-machine-learning/'>Job Description - Senior Software Development Engineer - Machine Learning - OCI Data Science Cloud Service (19001B4Y) Senior Software Development Engineer - Machine Learning - OCI Data Science Cloud Service 19001B4Y - The Machine Learning Conference</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -161,7 +161,7 @@
 <p><span class="badge badge-light">Richmond, VA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DataFactory/743999698490982-machine-learning-engineer-remote'>DataFactory Machine Learning Engineer - Remote | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DataFactory/743999698490982-machine-learning-engineer-remote'>DataFactory Machine Learning Engineer - Remote | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -178,7 +178,7 @@ learning and computer vision to join our team.</p>
 <p><span class="badge badge-light">Mountain View, California United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698458836-stage-data-mise-en-uvre-d-une-solution-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698458836-stage-data-mise-en-uvre-d-une-solution-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -263,7 +263,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/agoda/jobs/1918844'>Job Application for Senior Machine Learning Engineer, Data Platform at Agoda</a></h5> 
+<h5><a href='https://boards.greenhouse.io/agoda/jobs/1918844'>Job Application for Senior Machine Learning Engineer, Data Platform at Agoda</a></h5> 
 <p><span class="badge badge-light">Bangkok Thailand?  Thailand</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -271,16 +271,16 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/the-yes/ffbd939f-fe2e-4270-bbe5-010be449188f'>The Yes - Software Engineer - Machine Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/the-yes/ffbd939f-fe2e-4270-bbe5-010be449188f'>The Yes - Software Engineer - Machine Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4481264002?gh_src=34a6a6242'>Job Application for Deep Learning/Machine Learning Research ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4481264002?gh_src=34a6a6242'>Job Application for Deep Learning/Machine Learning Research ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... As either the Deep Learning Engineer or ML Research Engineer, you will be at 
 the center of our core mission, building state of the art technologies. You will be?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/bios-3/j/A55BA1465A/'>Machine Learning Developer - BIOS</a></h5> 
+<h5><a href='https://apply.workable.com/bios-3/j/A55BA1465A/'>Machine Learning Developer - BIOS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Perform research to apply machine learning (particularly deep learning, 
 reinforcement learning and transfer learning) to real world problems. Provide 
@@ -410,7 +410,7 @@ optimize deep learning models for efficient inference. These optimizations are?.
 Machine Learning Scientists to explore and understand the latest in AI, NLP, and 
 ML;?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=0870e50c1'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=0870e50c1'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -420,7 +420,7 @@ ML;?...</p>
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://tensortechnologies.recruitee.com/o/trader-with-machine-learning-experience'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tensortechnologies.recruitee.com/o/trader-with-machine-learning-experience'>
       Trader with Machine Learning experience - Tensor Technologies
     </a></h5> 
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
@@ -431,7 +431,7 @@ ML;?...</p>
 <p>Oct 11, 2019 ... Machine Learning Engineer. Seattle, WA. Engineering ? Machine Learning. Full-
 time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697823053-machine-learning-engineer-yogyakarta-indonesia-'>A Job Thing Machine Learning Engineer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697823053-machine-learning-engineer-yogyakarta-indonesia-'>A Job Thing Machine Learning Engineer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indonesia Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -453,7 +453,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Mobica/743999697534160-machine-learning-research-engineer'>Mobica  Machine Learning Research Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Mobica/743999697534160-machine-learning-research-engineer'>Mobica  Machine Learning Research Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -469,7 +469,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697742728-abschlussarbeit-automatisiertes-machine-learning'>Bosch Group Abschlussarbeit Automatisiertes Machine Learning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697742728-abschlussarbeit-automatisiertes-machine-learning'>Bosch Group Abschlussarbeit Automatisiertes Machine Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -477,7 +477,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://verticalscale.join.com/jobs/440723-machine-learning-engineer-internship-f-m-d'>Job @ Vertical  Scale  (Berlin): Machine Learning ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verticalscale.join.com/jobs/440723-machine-learning-engineer-internship-f-m-d'>Job @ Vertical  Scale  (Berlin): Machine Learning ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
